force-app/main/default/objects/ARTL_BulkCartUpdate__c/ARTL_BulkCartUpdate__c.object-meta.xml
<CustomObject>
    <label>Bulk Cart Update</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ARTL_BulkCartUpdate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulk Cart Update</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>