force-app/main/default/objects/ARTL_BulkCartUpdate__c/fields/Business_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>