force-app/main/default/objects/ARTL_BulkCartUpdate__c/fields/Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>Cart_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cart Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>