force-app/main/default/objects/ARTL_BulkCartUpdate__c/fields/Iteration_Id__c.field-meta.xml
<CustomField>
    <fullName>Iteration_Id__c</fullName>
    <label>Iteration Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>