force-app/main/default/objects/ARTL_BulkCartUpdate__c/fields/Request_JSON_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_JSON_Payload__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request JSON Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>