force-app/main/default/objects/ARTL_BulkCartUpdate__c/fields/Sobject_Type__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sobject Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>