force-app/main/default/objects/ARTL_BulkCartUpdate__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Task Record Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>