force-app/main/default/objects/ARTL_BulkCartUpdate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Account_Id__c</columns>
    <columns>Errors__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Transaction_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>